--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,5 @@
 @import "_null.scss";
 @import "iconsfont.css";
-@import "swiper-bundle.min.css";
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=Ubuntu:wght@400;700&display=swap");
 
 body {
@@ -477,19 +476,14 @@ body {
 	height: 100%;
 	display: flex;
 	flex: 0 0 60%;
-	transform: translate(-160px, 0%);
+	transform: translate(-157px, 0%);
 }
 .swiper-button-prev::after,
 .swiper-button-next::after {
+	display: none;
 	font-size: 0px;
 }
-.swiper-pagination {
-	display: inline-block;
-	position: absolute;
-	bottom: 0px;
-	font-size: 18px;
-	color: #c0c0c0;
-}
+
 .swiper-arrow {
 }
 #pagin {
@@ -504,19 +498,19 @@ body {
 .swiper-buttons {
 	z-index: 3;
 	position: absolute;
-	bottom: -30px;
+	bottom: -56px;
 	left: 50%;
 
 	.swiper-arrow_left {
-		left: -87px;
+		left: -92px;
 	}
 	.swiper-arrow_right {
-		left: 47px;
+		left: 52px;
 	}
 	.swiper-pagination {
 		display: inline-block;
 		position: absolute;
-		bottom: -30px;
+		bottom: -10px;
 		left: -20px;
 		font-size: 18px;
 		color: #c0c0c0;
@@ -590,7 +584,7 @@ body {
 		margin: 0px 0px 0px 6px;
 	}
 	.swiper-buttons {
-		bottom: -18px;
+		bottom: -40px;
 	}
 }
 //----------------------------------------------------------------------------------FOOTER--------------------------------------------------------------------------------
